# demostoolkit

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  INSTALL.md  LICENSE.md  README.md  UI_GUIDE.md  demostools  demostools_file.ts  install-demos-toolkit.ps1  install-demos-toolkit.sh  package.json  quick-install.sh  setup.sh
power-user-scripts/: README.md  build-ui.sh  launch-ui.sh  package-distribution.sh
tools/: bridge_assets.ts  config_tool.ts
tools/modules/: batch-sign.ts  check-balance.ts  config.ts  encrypt-data.ts  generate-wallet.ts  get-block.ts  get-mempool.ts  get-nonce.ts  get-transaction.ts  hash-data.ts  multichain.ts  network-info.ts  send.ts  sign-message.ts  verify-message.ts  web2-identity.ts  web2-proxy.ts
tools/utils/: config.ts  encryption.ts  logger.ts  tool-framework.ts
ui-app/: README.md  index.html  package.json  setup.sh  tsconfig.json  vite.config.ts
ui-app/src/: main.ts
ui-app/src-tauri/: Cargo.toml  tauri.conf.json
ui-app/src-tauri/icons/: icon.icns
ui-app/src-tauri/src/: main.rs
