[package]
name = "demostools-ui"
version = "0.1.0"
description = "Desktop UI for Demos SDK Toolkit"
authors = ["Kynesys Labs"]
license = "MIT"
repository = "https://github.com/kynesyslabs/demostools"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
